# YADRO-test-task-magnet-tapes

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  sorter.cpp  sorter.h  tape.cpp  tape.h
test/src/: test_basic.cpp
test/testConfigs/: config1.txt  config2.txt
test/testcases/: case1.txt  case2.txt
